# ChuckNorrisJokesBot

./: CHANGELOG.md  ChuckNorrisJokes.cabal  README.md
app/: Main.hs
src/: Api.hs  Bot.hs  Run.hs
src/Bot/: ApiHandler.hs  AppHandler.hs  Effect.hs  Error.hs  Keyboard.hs
