cabal-version:   3.0
name:            ChuckNorrisJokes
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE
author:          DeniLark
maintainer:      denlarsites@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common general
  ghc-options:        -Wall
  build-depends:
    , base                 ^>=4.17.2.1
    , effectful
    , effectful-th
    , servant-client
    , telegram-bot-api
    , telegram-bot-simple
    , text

  default-extensions:
    DataKinds
    FlexibleContexts
    GADTs
    TypeFamilies
    TypeOperators

library
  import:           general
  exposed-modules:  Run
  other-modules:
    Bot
    Bot.AppHandler
    Bot.Effect
    Bot.Error

  -- other-extensions:
  hs-source-dirs:   src
  default-language: Haskell2010

executable ChuckNorrisJokes
  import:           general
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:    ChuckNorrisJokes
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite ChuckNorrisJokes-test
  import:           general
  default-language: Haskell2010

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    ChuckNorrisJokes
